<resources>
    <string name="app_name">DroidCon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="droidcon_moscow">droidcon Moscow</string>
    <string name="date_conf">22 september 2016</string>
    <string name="nav_title_all_sessions">All sessions</string>
    <string name="my_schedule">My schedule</string>
    <string name="nav_speakers">Speakers</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_terms_of_droidcon">Terms of droidcon</string>
    <string name="url_terms">http://droidcon.moscow/images/regulations_droidcon_moscow_2016.docx</string>
    <string name="nav_actions">Actions</string>
    <string name="nav_share">Share</string>
    <string name="droidcon_moscow_tilte">DROIDCON MOSCOW</string>
    <!--<string name="download_title_terms">Terms of droidcon 2016.docx</string>-->
</resources>
